Fix overflow on stream

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -20,8 +20,8 @@
   -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-  margin-bottom: 10px;
   min-height: 500px;
+  padding-bottom: 50px;
 
   .app-box-head {
     background-color: #AEBBC1;
@@ -53,7 +53,7 @@
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
-    padding: 20px 30px;
+    padding: 10px 30px;
   }
 }
 
